Add new Files for documentation, Add the index method for the scanner
